# anima.cu

./: .gitignore  CMakeLists.txt
src/: anima.h  cuda_utils.cu  cuda_utils.cuh  cudnn_sdpa.cpp  cudnn_sdpa.h  linear.cpp  linear.h  llm_adapter.cpp  llm_adapter.h  main.cpp  pipeline.cpp  pipeline.h  qwen3.cpp  qwen3.h  qwen3_tokenizer.cpp  qwen3_tokenizer.h  safetensors.cpp  safetensors.h  scheduler.cpp  scheduler.h  spectrum.cu  spectrum.h  t5_tokenizer.cpp  t5_tokenizer.h  tensor.cpp  tensor.h  transformer.cpp  transformer.h  vae.cpp  vae.h
src/kernels/: adaln.cu  causal_conv3d.cu  elementwise.cu  f32_ops.cu  gelu.cu  gemma_ops.cu  group_norm.cu  kernels.h  layer_norm.cu  patchify.cu  rms_norm.cu  rope.cu  silu.cu  softmax.cu  transpose.cu  vae_kernels.cu
